Fix nav on mobile

--- a/static/stylesheets/common.css
+++ b/static/stylesheets/common.css
@@ -64,7 +64,6 @@ p {
 
     #fixed_head {
         z-index: 10;
-        display: none;
         position: fixed;
         top: 0;
         width: 100%;
