--- a/static/stylesheets/common_phone.css
+++ b/static/stylesheets/common_phone.css
@@ -136,4 +136,22 @@ p {
     color: #9DC394;
 }
 
+#menu {
+    display: none;
+    position: fixed;
+    background-color: #1F2020;
+    top: 0px;
+    margin-top: 50px;
+    width: 100%;
+    text-align: center;
+}
 
+#menu a {
+    display: block;
+    margin: 10px;
+    font-size: 15px;
+    text-decoration: none;
+    font-family: "柔源l";
+    letter-spacing: 10px;
+    color: #9DC394;
+}
